fixed submenu label and icon alignment

--- a/src/assets/css/theme/leftnav.css
+++ b/src/assets/css/theme/leftnav.css
@@ -138,7 +138,7 @@
 .leftnav-container .leftnav .list .ml-menu span {
     font-weight: normal;
     font-size: 14px;
-    margin: 3px 0 1px 6px;
+    margin: 6px 0 1px 6px;
 }
 
 .leftnav-container .leftnav .list .ml-menu li a {
